--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,25 @@
 plugins {
-    id("java")
+    id 'java'
 }
 
-group = "com.java"
-version = "1.0-SNAPSHOT"
+group = 'camp.nextstep.edu'
+version = '1.0-SNAPSHOT'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
+}
 
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    implementation 'com.github.woowacourse-projects:mission-utils:1.2.0'
 }
 
-tasks.test {
+test {
     useJUnitPlatform()
 }
